--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_iL25TtAXmAeZASemkpL
+spring.datasource.url = jdbc:mysql://db-mysql-sgp1-86223-do-user-12585567-0.b.db.ondigitalocean.com:25060/admin_db?ssl-mode=REQUIRED
 
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
