--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,10 +23,10 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "src/assets/assets/dist/css/bootstrap.min.css",
               "src/signin.css"
-             
             ],
             "scripts": []
           },
@@ -93,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
